# devrun

./: .gitignore  Cargo.toml  README.md  Runfile  test.script
.github/workflows/: release.yml
completions/: run.bash  run.fish  run.zsh
scripts/: deploy.sh
src/: ast.rs  executor.rs  grammar.pest  interpreter.rs  main.rs  parser.rs
tests/: integration_test.rs
