[package]
name = "devrun"
version = "0.1.5"
edition = "2024"
authors = ["nihilok nihilok@jarv.dev"]
description = "A lightweight task runner for defining and executing shell commands with a clean, readable syntax."
license = "MIT"
repository = "https://github.com/nihilok/devrun"

[dependencies]
pest = "2.8.2"
pest_derive = "2.8.2"
clap = { version = "4.5", features = ["derive"] }
which = "8.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "run"
path = "src/main.rs"
